samples/_failures_safe/1761426113_4478c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51b972c4.c: In function ‘main’:
./samples/SAFE/__tmp_51b972c4.c:155:13: error: expected expression at end of input
  155 |             from < 0 || from >= nodes || to <
      |             ^~~~
./samples/SAFE/__tmp_51b972c4.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51b972c4.c:155:13: error: expected declaration or statement at end of input
